feat(i18n): integrate i18next for internationalization support
- Added i18next and related packages for language detection and translation.
- Implemented language switching with support for RTL languages.
- Created translation files for English with various app strings.
- Updated components to use translation hooks for dynamic text rendering.
- Adjusted styles to support RTL layout where necessary.
- Enhanced user experience by storing language preference in localStorage.

--- a/TopNotify/src-vite/public/drag.html
+++ b/TopNotify/src-vite/public/drag.html
@@ -29,6 +29,7 @@
             width: 100%;
             height: 100vh;
             align-items: center;
+            /* Flexbox will auto-reverse in RTL mode */
         }
 
         .dragMode img {
@@ -40,7 +41,7 @@
         .coordinates {
             color: white;
             position: absolute;
-            right: 16vh;
+            inset-inline-end: 16vh;
             bottom: 16vh;
             font-size: 12vh;
             margin: 0;
@@ -76,6 +77,13 @@
     </div>
 
     <script>
+        // Set RTL direction based on stored language preference
+        const rtlLanguages = ['ar', 'he'];
+        const storedLang = localStorage.getItem('topnotify-language');
+        if (storedLang && rtlLanguages.includes(storedLang.split('-')[0])) {
+            document.documentElement.dir = 'rtl';
+            document.documentElement.lang = storedLang;
+        }
 
         window.updateCoordinates = (x, y) => {
             document.querySelector(".coordinates").innerText = `(${x}, ${y})`
